==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic18/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#include "mcu.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->ch_enable
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_CCR_OFFSET                  0x304
#define HAL_LL_ADC_AUTO_CONVERT_MODE           0x70
#define HAL_LL_ADC_PMD3                        0x0EF1U
#define HAL_LL_ADC_RIGHT_JUSTIFIED             0x03
#define HAL_LL_ADC_RESOLUTION_BIT              0x02
#define HAL_LL_ADC_SAMPLE_ENABLE               0x01
#define HAL_LL_ADC_CONVERSION_STATUS           0x00
#define HAL_LL_ADC_SKIP_CHANNEL_FOR_INPUT_SCAN 0x00
#define HAL_LL_ADC_AUTO_SAMPLE_TIME_31_CYCLE   0X1F
#define HAL_LL_ADC_CONVERSION_CLOCK            0x02
#define HAL_LL_ADC_TURN_ON                     0x07
#define HAL_LL_ADC_MODULE_DISABLE              0x05
#define HAL_LL_ADC_VREF_MASK                   0xE0 // voltage reference mask
#define HAL_LL_ADC_PIN 0
#define HAL_LL_ADC_MODULE_PIN_COUNT 1

hal_ll_err_t hal_ll_module_configure_adc( handle_t *handle )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_adc_get_specifics( hal_ll_adc_get_module_state_address );
    hal_ll_adc_handle_register_t *hal_handle = (hal_ll_adc_handle_register_t *)*handle;
    uint8_t pin_check_result = hal_ll_adc_hw_specifics_map_local->module_index;

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;
    hal_ll_module_state[pin_check_result].init_ll_state = true;
    hal_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_adc_get_specifics( hal_ll_adc_get_module_state_address );
    low_level_handle = hal_ll_adc_get_handle;

    write_reg( HAL_LL_ADCHS0L_ADDRESS, hal_ll_adc_hw_specifics_map_local->channel);

    set_reg_bit( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_TURN_ON );

    set_reg_bit(HAL_LL_ADCON1L_ADDRESS, HAL_LL_ADC_SAMPLE_ENABLE);

    while ( !( check_reg_bit( HAL_LL_ADCON1L_ADDRESS, HAL_LL_ADC_CONVERSION_STATUS ) ) ); //conversion done

    *readDatabuf = *(uint16_t*)HAL_LL_ADCBUF0_ADDRESS;

    clear_reg_bit( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_TURN_ON );

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin, uint8_t *index, hal_ll_adc_handle_register_t *handle_map )
{
    uint8_t pin_index = 0;
    static const uint16_t adc_map_size = ( sizeof( hal_ll_analog_in_register_list ) / sizeof( hal_ll_pin_channel_list_t ) );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ ) {
        if ( hal_ll_analog_in_register_list[pin_index].pin == pin ) {
            *index = pin_index;
            return hal_ll_analog_in_register_list[ pin_index ].module_index;
        }
    }

    return HAL_LL_PIN_NC;
}

static void hal_ll_adc_map_pin( uint8_t module_index, uint8_t *index ) {
    // Map new pins
    hal_ll_adc_hw_specifics_map[module_index].pin = hal_ll_analog_in_register_list[*index ].pin;
    hal_ll_adc_hw_specifics_map[module_index].ch_enable = hal_ll_analog_in_register_list[ *index ].analog_in_register_addr;
    hal_ll_adc_hw_specifics_map[module_index].channel = hal_ll_analog_in_register_list[ *index ].channel;
}

static void _hal_ll_adc_hw_init(uint32_t resolution, uint32_t vref )
{
    clear_reg_bit( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_TURN_ON );

    write_reg( HAL_LL_ADCON1L_ADDRESS, HAL_LL_ADC_AUTO_CONVERT_MODE );

    if( resolution == HAL_LL_ADC_RESOLUTION_10_BIT )
        clear_reg_bit( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_RESOLUTION_BIT );
    else
        set_reg_bit( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_RESOLUTION_BIT );

    clear_reg_bits( HAL_LL_ADCON1H_ADDRESS, HAL_LL_ADC_RIGHT_JUSTIFIED );

    write_reg( HAL_LL_ADCSS0H_ADDRESS, HAL_LL_ADC_SKIP_CHANNEL_FOR_INPUT_SCAN );

    write_reg( HAL_LL_ADCON3H_ADDRESS, HAL_LL_ADC_AUTO_SAMPLE_TIME_31_CYCLE );

    write_reg( HAL_LL_ADCON3L_ADDRESS, HAL_LL_ADC_CONVERSION_CLOCK );

    clear_reg_bits( HAL_LL_ADCON2H_ADDRESS, HAL_LL_ADC_VREF_MASK );

    clear_reg( HAL_LL_ADCON2L_ADDRESS );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {
    hal_ll_gpio_port_analog_input( (hal_ll_gpio_base_t)hal_ll_gpio_port_base_map((map->pin & HAL_LL_NIBBLE_HIGH_8BIT) >> 4), map->pin );

    _hal_ll_adc_enable_module();

    _hal_ll_adc_hw_init( map->resolution, map->vref_input);
}
