==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/adc/implementation_1/subimplementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_CCR_OFFSET               0x304
#define HAL_LL_ADC_ADON_BIT                 0
#define HAL_LL_ADC_SR_EOC_BIT               1
#define HAL_LL_ADC_CONT_BIT                 1
#define HAL_LL_ADC_SCAN_BIT                 8
#define HAL_LL_ADC_ALIGN_BIT                11
#define HAL_LL_ADC_RESOLUTION_BIT0          24
#define HAL_LL_ADC_RESOLUTION_BIT1          25
#define HAL_LL_ADC_SWSTART_BIT              30
#define HAL_LL_ADC1_ENABLE_CLOCK            8
#define HAL_LL_ADC2_ENABLE_CLOCK            9
#define HAL_LL_ADC3_ENABLE_CLOCK            10
#define HAL_LL_ADC_CONT                     0x2ul
#define HAL_LL_ADC_SCAN                     0x100ul
#define HAL_LL_ADC_ALIGN                    0x800ul
#define HAL_LL_ADC_JEXTSEL                  0xE0000ul
#define HAL_LL_ADC_16MHZ                    16000000ul

hal_ll_err_t hal_ll_module_configure_adc( handle_t *handle )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    hal_ll_adc_pin_id index = {HAL_LL_PIN_NC};
    uint16_t pin_check_result;

    if ( (pin_check_result = hal_ll_adc_check_pins( hal_ll_adc_hw_specifics_map_local->pin, &index, (void *)0 ) ) == HAL_LL_PIN_NC )
    {
        return HAL_LL_ADC_WRONG_PIN;
    };

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;
    hal_ll_module_state[pin_check_result].init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base ;

    base->sqr3 &= ~HAL_LL_ADC_CONVERSION_ONE;
    base->sqr3 |= ( ( hal_ll_adc_hw_specifics_map_local->channel ) & ( HAL_LL_ADC_CONVERSION_ONE ) );

    // Start the conversion
    set_reg_bit( &( base->cr2 ), HAL_LL_ADC_SWSTART_BIT );

    // The application should allow a delay of tSTAB between power up and start of conversion.
    Delay_1us();

    while ( !( check_reg_bit( &( base->sr ), HAL_LL_ADC_SR_EOC_BIT ) ) );
    // Conversion result from SS3.
    *readDatabuf = base->dr;

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin, hal_ll_adc_pin_id *index, hal_ll_adc_handle_register_t *handle_map )
{
    static const uint16_t     adc_map_size = ( sizeof( _adc_map ) / sizeof( hal_ll_adc_pin_map_t ) );
    uint16_t     pin_index = 0;
    uint8_t      index_counter = 0;
    uint8_t      hal_ll_module_id = 0;

    if ( pin == HAL_LL_PIN_NC )
    {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ )
    {
        if ( pin == _adc_map[pin_index].pin )
        {
            // Get module number
            hal_ll_module_id = _adc_map[pin_index].module_index;
            // Map pin name
            index->pin_an[hal_ll_module_id] = pin_index;

            // Check if module is taken
            if ( NULL == handle_map[ hal_ll_module_id ].hal_drv_adc_handle ) {
                return hal_ll_module_id;
            } else if ( ADC_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_adc_map_pin( uint8_t module_index, hal_ll_adc_pin_id *index ) {
    // Map new pins
    hal_ll_adc_hw_specifics_map[module_index].pin = _adc_map[ index->pin_an[module_index] ].pin;
    hal_ll_adc_hw_specifics_map[module_index].channel = _adc_map[ index->pin_an[module_index] ].channel;
}

static void _hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base, uint32_t resolution )
{
    rcc_clocks_t rcc_clocks;
    static uint32_t *reg = ADC1_BASE_ADDR + HAL_LL_ADC_CCR_OFFSET;
    /* ADC_CCR register is a common register
       and relative to ADC1 + HAL_ADC_CCR_OFFSET. */
    /* ADC clock
       The ADC features two clock schemes:
       Clock for the analog circuitry: ADCCLK, common to all ADCs
       This clock is generated from the APB2 clock divided by a programmable prescaler that
       allows the ADC to work at fPCLK2/2, /4, /6 or /8. ADCCLK maximum value is 30 MHz
       when the APB2 clock is at 60 MHz. */
    RCC_GetClocksFrequency( &rcc_clocks );

    *reg &= ~HAL_LL_ADC_PRESCALER_MASK;

    #if defined(STM32F4xx) || defined(STM32F2xx)
    if ( rcc_clocks.pclk2 > HAL_LL_ADC_180MHZ )
    {
        *reg |= HAL_LL_ADC_PRESCALER_8;
    }
    else if ( rcc_clocks.pclk2 > HAL_LL_ADC_120MHZ )
    {
        *reg |= HAL_LL_ADC_PRESCALER_6;
    }
    else if ( rcc_clocks.pclk2 > HAL_LL_ADC_60MHZ )
    {
        *reg |= HAL_LL_ADC_PRESCALER_4;
    }
    else
    {
        *reg |= HAL_LL_ADC_PRESCALER_2;
    }
    #elif defined(STM32F7xx)
    if ( rcc_clocks.pclk2 > HAL_LL_ADC_144MHZ )
    {
        *reg |= HAL_LL_ADC_PRESCALER_6;
    }
    else if ( rcc_clocks.pclk2 > HAL_LL_ADC_72MHZ )
    {
        *reg |= HAL_LL_ADC_PRESCALER_4;
    }
    else
    {
        *reg |= HAL_LL_ADC_PRESCALER_2;
    }
    #endif

    // Clear SCAN bits.
    base->cr1 &= 0xFFF0FEFF;//HAL_ADC_SCAN;

    // Clear CONT, ALIGN and EXTSEL bits.
    base->cr2 &= ~( HAL_LL_ADC_CONT |
                    HAL_LL_ADC_ALIGN |
                    HAL_LL_ADC_JEXTSEL );

    // Set resolution.
    base->cr1 &= HAL_LL_RESOLUTION_MASK;

    base->cr1 |= resolution;

    // Scan mode disabled.
    clear_reg_bit( &( base->cr1 ), HAL_LL_ADC_SCAN_BIT );

    // Single conversion mode.
    clear_reg_bit( &( base->cr2 ), HAL_LL_ADC_CONT_BIT );

    // Data alighment = right.
    clear_reg_bit( &( base->cr2 ), HAL_LL_ADC_ALIGN_BIT );

    // Regular channel sequence length 0000: 1 conversion.
    base->sqr1 &= HAL_LL_ADC_SEQUENCE_LENGTH_MASK;

    // Enable ADC.
    set_reg_bit( &( base->cr2 ), HAL_LL_ADC_ADON_BIT );

}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_analog_input( hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) ),
                                                     hal_ll_gpio_pin_mask( map->pin ) );

    _hal_ll_adc_enable_clock( map->module_index );

    _hal_ll_adc_hw_init((hal_ll_adc_base_handle_t *)map->base, map->resolution);

}
